<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question1" />

        <CheckBox
            android:id="@+id/question1answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1answer1" />

        <CheckBox
            android:id="@+id/question1answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1answer2" />

        <CheckBox
            android:id="@+id/question1answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1answer3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question2" />

        <EditText
            android:id="@+id/question2edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question2hint"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question3" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question3answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer1" />

            <RadioButton
                android:id="@+id/question3answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer2" />

            <RadioButton
                android:id="@+id/question3answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer3" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question4" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question4answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4answer1" />

            <RadioButton
                android:id="@+id/question4answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4answer2" />

            <RadioButton
                android:id="@+id/question4answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4answer3" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question5" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5answer1" />

            <RadioButton
                android:id="@+id/question5answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5answer2" />

            <RadioButton
                android:id="@+id/question5answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5answer3" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question6" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question6answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6answer1" />

            <RadioButton
                android:id="@+id/question6answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6answer2" />

            <RadioButton
                android:id="@+id/question6answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6answer3" />

        </RadioGroup>

        <Button
            android:id="@+id/button_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/button_submit_answer" />

    </LinearLayout>

</ScrollView>